JT-6467 Fix padding on pagination buttons on mobile

--- a/app/assets/stylesheets/pages/search/_search_page.scss
+++ b/app/assets/stylesheets/pages/search/_search_page.scss
@@ -36,7 +36,7 @@ body {
       display: flex;
       justify-content: center;
       align-items: center;
-      @include media-breakpoint-up(xs) {
+      @include media-breakpoint-up(sm) {
         .anchor-button {
           min-width: 40px;
           padding: 0;
